Update portfolio projects section with live demo and repo links

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
         <h3>Portfolio</h3>
         <p>Personal portfolio website with a clean, responsive design built using HTML & CSS.
           Showcases skills, projects, and contact links in a modern layout.</p>
-        <a href="https://your-live-link.com" target="_blank" class="project-btn">View Project</a>
+        <a href="https://sehamsayed267.github.io/My-Portfolio/" target="_blank" class="project-btn">Live Demo</a>
+        <a href="https://github.com/SehamSayed267/My-Portfolio" target="_blank" class="project-btn">Source Code</a>
       </div>
     </div>
 
@@ -109,7 +110,8 @@
         <h3>ِAgency Landing Page Figma</h3>
         <p>Creative digital agency website concept designed in Figma.
           Focused on modern UI/UX, smooth layout, and professional branding for a sleek look.</p>
-        <a href="#" class="project-btn">View Project</a>
+        <a href="https://sehamsayed267.github.io/Agency-Website/" class="project-btn">Live Demo</a>
+        <a href="https://github.com/SehamSayed267/Agency-Website" class="project-btn">Source Code</a>
       </div>
     </div>
 
@@ -119,7 +121,8 @@
         <h3>To-Do List</h3>
         <p>Simple and interactive to-do list app built with JavaScript.
           Allows users to add, mark, and delete tasks with a clean and responsive interface.</p>
-        <a href="https://sehamsayed267.github.io/To-Do-List-App/home.html" class="project-btn">View Project</a>
+        <a href="https://sehamsayed267.github.io/To-Do-List-App/login.html" class="project-btn">Live Demo</a>
+        <a href="https://github.com/SehamSayed267/To-Do-List-App" class="project-btn">Source Code</a>
       </div>
     </div>
 
