--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
         <h3>Portfolio</h3>
         <p>Personal portfolio website with a clean, responsive design built using HTML & CSS.
           Showcases skills, projects, and contact links in a modern layout.</p>
-        <a href="https://sehamsayed267.github.io/My-Portfolio/" target="_blank" class="project-btn">Live Demo</a>
-        <a href="https://github.com/SehamSayed267/My-Portfolio" target="_blank" class="project-btn">Source Code</a>
+        <a href="https://github.com/SehamSayed267/My-Portfolio" target="_blank" class="project-btn">View Project</a>
       </div>
     </div>
 
@@ -110,8 +109,7 @@
         <h3>ِAgency Landing Page Figma</h3>
         <p>Creative digital agency website concept designed in Figma.
           Focused on modern UI/UX, smooth layout, and professional branding for a sleek look.</p>
-        <a href="https://sehamsayed267.github.io/Agency-Website/" class="project-btn">Live Demo</a>
-        <a href="https://github.com/SehamSayed267/Agency-Website" class="project-btn">Source Code</a>
+        <a href="https://github.com/SehamSayed267/Agency-Website" class="project-btn">View Project</a>
       </div>
     </div>
 
@@ -120,32 +118,14 @@
       <div class="project-content">
         <h3>To-Do List</h3>
         <p>Simple and interactive to-do list app built with JavaScript.
-          Allows users to add, mark, and delete tasks with a clean and responsive interface.</p>
-        <a href="https://sehamsayed267.github.io/To-Do-List-App/login.html" class="project-btn">Live Demo</a>
-        <a href="https://github.com/SehamSayed267/To-Do-List-App" class="project-btn">Source Code</a>
+          Focused on adding, completing, and deleting tasks with a clean, responsive, and user-friendly interface.</p>
+        <a href="https://github.com/SehamSayed267/To-Do-List-App" class="project-btn">View Project</a>
       </div>
     </div>
 
   </div>
 </section>
 
-
-
-        <!-- my-goals section -->
-        <section id="my-goals" class="section">
-            <div>
-            <h2>My Goals</h2>
-            <p>
-            My current focus is on front-end development. I am learning and improving my skills in HTML, CSS, and JavaScript, along with tools like responsive design and layout techniques.
-            </p><br>
-            <p>
-                In the future, I plan to expand my knowledge by learning back-end technologies such as Node.js and databases, with the goal of becoming a Full Stack Developer.
-            </p><br>
-            <p>
-                I aim to build real-world projects that showcase my front-end skills, grow my portfolio, and eventually work in a professional development team where I can learn and contribute to full-stack applications.
-            </p>
-            </div>
-        </section>   
     </main>
 
     <!-- contact section -->
